// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response Download (auto) 1`] = `
{
  "code": 200,
  "cookies": [],
  "headers": {
    "content-disposition": "attachment; filename=download.txt",
    "content-length": "14",
    "content-type": "text/plain",
  },
  "status": "OK",
}
`;

exports[`Response Download 1`] = `
{
  "code": 200,
  "cookies": [],
  "headers": {
    "content-disposition": "attachment; filename=download.txt",
    "content-length": "14",
    "content-type": "text/plain",
  },
  "status": "OK",
}
`;

exports[`Response JSON 1`] = `"application/json; charset=utf-8"`;

exports[`Response JSON 2`] = `
{
  "body": "{"foo":"bar"}",
  "code": 200,
  "cookies": [],
  "headers": {
    "content-type": "application/json; charset=utf-8",
  },
  "status": "OK",
}
`;

exports[`Response Main 1`] = `"text/plain; charset=utf-8"`;

exports[`Response Main 2`] = `
{
  "body": "",
  "code": 204,
  "cookies": [],
  "headers": {
    "content-type": "text/plain; charset=utf-8",
    "foo": "123",
  },
  "status": "No Content",
}
`;

exports[`Response Redirect 1`] = `
{
  "body": "",
  "code": 301,
  "cookies": [],
  "headers": {
    "content-type": "text/plain; charset=utf-8",
    "location": "/redirect",
  },
  "status": "Moved Permanently",
}
`;
